--- a/configs/baseline2.conf
+++ b/configs/baseline2.conf
@@ -3,28 +3,35 @@
     "dataloader": "backend_fusion",
     "dirs": {
         "spk_meta": "spk_meta/",
-        "embeddings": "embeddings/",
+        "embedding": "embeddings/",
         "dev_trial": "protocols/ASVspoof2019.LA.asv.dev.gi.trl.txt",
         "eval_trial": "protocols/ASVspoof2019.LA.asv.eval.gi.trl.txt",
         "cm_trn_list": "protocols/ASVspoof2019.LA.cm.train.trn.txt",
         "cm_dev_list": "protocols/ASVspoof2019.LA.cm.dev.trl.txt",
         "cm_eval_list": "protocols/ASVspoof2019.LA.cm.eval.trl.txt",
-    }
+    },
     "epoch": 50,
-    "loss": "bce",
+    "fast_dev_run": false,
+    "loader": {
+        "n_workers": 6
+    },
+    "loss": "cce",
     "loss_weight": [0.1, 0.9],
     "model_arch": "baseline2",
     "model_config": {
         "code_dim": 544,
         "dnn_l_nodes": [256, 128, 64]
     },
+    "ngpus": 1,
     "optim": {
         "optimizer": "adam",
         "lr": 0.0001,
         "scheduler": "keras",
         "wd": 0.001
     },
-    "loader": {
-        "n_workers": 6
-    }
+    "progbar_refresh": 10,
+    "pl_system": "baseline2",
+    "save_top_k": 3,
+    "seed": 1234,
+    "val_interval_epoch": 1
 }
