add more params

--- a/configs/baseline2.conf
+++ b/configs/baseline2.conf
@@ -4,13 +4,13 @@
     "dirs": {
         "spk_meta": "spk_meta/",
         "embedding": "embeddings/",
-        "dev_trial": "protocols/ASVspoof2019.LA.asv.dev.gi.trl.txt",
-        "eval_trial": "protocols/ASVspoof2019.LA.asv.eval.gi.trl.txt",
+        "sasv_dev_trial": "protocols/ASVspoof2019.LA.asv.dev.gi.trl.txt",
+        "sasv_eval_trial": "protocols/ASVspoof2019.LA.asv.eval.gi.trl.txt",
         "cm_trn_list": "protocols/ASVspoof2019.LA.cm.train.trn.txt",
         "cm_dev_list": "protocols/ASVspoof2019.LA.cm.dev.trl.txt",
         "cm_eval_list": "protocols/ASVspoof2019.LA.cm.eval.trl.txt",
     },
-    "epoch": 50,
+    "epoch": 10,
     "fast_dev_run": false,
     "loader": {
         "n_workers": 6
@@ -23,8 +23,8 @@
         "dnn_l_nodes": [256, 128, 64]
     },
     "ngpus": 1,
+    "optimizer": "adam",
     "optim": {
-        "optimizer": "adam",
         "lr": 0.0001,
         "scheduler": "keras",
         "wd": 0.001
